8223798: Replace wildcard address with loopback or local host in tests - part 7
Reviewed-by: dfuchs, vtewari